# editecc

./: .gitignore  AGENTS.md  ANEXOA.md  CLAUDE.md  CONTRIBUTING.md  DOC75.md  FOLHADEAPROVACAO.md  LICENSE  MODELO.md  README.md  ROADMAP.md  TAURI.md  TCC_ARCA_completo.editecc  TCC_ARCA_corrigido 1.docx  USAGE.md  apresentacao_tcc.pptx  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  teste_slides.pptx  vitest.config.ts
.github/workflows/: ci.yml
@types/: citation-js.d.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: AbstractPage.tsx  AbstractSection.tsx  Agradecimentos.tsx  AnexoPage.tsx  ApendicePage.tsx  Capa.tsx  Dedicatoria.tsx  DocumentManager.tsx  Editor.module.css  Editor.tsx  EditorCanvas.tsx  EditorSkeleton.tsx  EditorStatusBar.tsx  EditorToolbar.tsx  Epigrafe.tsx  ErrorBoundary.tsx  FeedbackButton.tsx  FolhaAprovacao.tsx  FolhaRosto.tsx  GeradorReferencias.tsx  GlossarioManager.tsx  GlossarioPage.tsx  ListaFigurasTabelas.tsx  NotasRodapeManager.tsx  NotasRodapePage.tsx  PageBreakIndicator.tsx  PagePreview.tsx  PosTextuaisManager.tsx  ResumoPage.tsx  ResumoSection.tsx  SumarioPage.tsx
hooks/: useAutosave.ts  useDocuments.ts  useSummarization.ts  useTauri.ts  useTranslation.ts
lib/: coverReducer.ts  document.ts  exportDocument.ts  exportRtf.ts  slideGenerator.ts  tfidf.ts  types.ts
public/: google53lIeo9YV1FF6kndubgIiNJB1LOa12bMGsZiDHaQngg.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+24 files in other folders)
