[package]
name = "editecc"
version = "0.1.0"
description = "EditeCC — Editor de textos acadêmicos com formatação ABNT"
authors = ["rodrigopereiradevelopment"]
license = "MIT"
repository = "https://github.com/rodrigopereiradevelopment/editecc"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "editecc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
